# edgeproxy

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  README.md  Taskfile.yaml  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: release.yaml
.tasks/: aws.yaml  build.yaml  db.yaml  deps.yaml  dev.yaml  docker.yaml  docs.yaml  flyio.yaml  gcp.yaml  local.yaml  node.yaml  run.yaml  simulation.yaml  test.yaml
contacts-api/: Dockerfile  entrypoint.sh  go.mod  main.go  seed.go
docker/: init-routing.sql  routing-docker.db
docs/: .gitignore  Taskfile.yaml  docusaurus.config.ts  sidebars.ts
docs/docs/: architecture.md  benchmark.md  configuration.md  getting-started.md  intro.md
docs/docs/deployment/: aws.md  docker.md  kubernetes.md
docs/docs/internals/: client-affinity.md  load-balancer.md
docs/i18n/pt-BR/: code.json
docs/markdown/: architecture.md  benchmark.md  configuration.md  getting-started.md  intro.md  performance.md  testing.md  wireguard.md
docs/markdown/configuration/: auto-discovery-api.md  corrosion.md  database-schema.md  dns-server.md  environment-variables.md  index.md  infrastructure.md  replication.md
docs/markdown/deployment/: aws-rds-wireguard.md  aws.md  docker.md  flyio.md  gcp.md  rds-benchmark.md
docs/markdown/internals/: client-affinity.md  load-balancer.md  node-management.md
docs/markdown/roadmap/: index.md  phase-1-internal-dns.md  phase-1-ipv6.md  phase-2-anycast-bgp.md  phase-2-corrosion.md  phase-3-auto-discovery.md  phase-3-health-checks.md  phase-4-ipv6.md  phase-5-anycast-bgp.md  phase-6-health-checks.md
docs/markdown/tests/: auto-discovery.md  flyio-integration.md  load-testing.md  stress-testing.md
docs/src/pages/: index.module.css  index.tsx
fly-backend/: .gitignore  Dockerfile  Taskfile.yaml  entrypoint.sh  go.mod  main.go
fly-backend/wireguard/: ec2-public.key  sin-public.key
scripts/: benchmark.sh  userdata.sh
sql/: create_routing_db.sql  fly_backends.sql
src/: config.rs  db.rs  lb.rs  lib.rs  main.rs  model.rs  proxy.rs  state.rs
src/adapters/inbound/: api_server.rs  dns_server.rs  mod.rs  tcp_server.rs  tls_server.rs
src/adapters/outbound/: corrosion_backend_repo.rs  dashmap_binding_repo.rs  dashmap_metrics_store.rs  maxmind_geo_resolver.rs  mod.rs  postgres_backend_repo.rs  prometheus_metrics_store.rs  sqlite_backend_repo.rs
src/application/: mod.rs  proxy_service.rs
src/domain/: entities.rs  value_objects.rs
src/domain/ports/: backend_repository.rs  binding_repository.rs  geo_resolver.rs  metrics_store.rs  mod.rs
src/domain/services/: load_balancer.rs  mod.rs
src/infrastructure/: circuit_breaker.rs  config_watcher.rs  connection_pool.rs  health_checker.rs  mod.rs  rate_limiter.rs  shutdown.rs
src/replication/: agent.rs  config.rs  gossip.rs  mod.rs  sync.rs  transport.rs  types.rs
tests/: gossip_integration.rs  health_check_integration.rs  simulate_multi_region.sh  test_multi_region.sh  test_routing.sh  transport_integration.rs
tests/contacts-api/: fly.toml  setup-ec2-routing.sh
tests/fly-backend/: Taskfile.yaml  fly.toml  go.mod
tests/fly-backend/wireguard/: .gitignore  cdg-public.key  fra-public.key  (+7 more)
tests/mock-backend/: README.md  main.go
tests/scripts/: mock_backend.py  start_local_env.sh  test_docker.sh
wireguard/: fly.conf
(+43 files in other folders)
