[package]
name = "edge-proxy"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
maxminddb = "0.23"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

# TLS support (rustls 0.23 required by quinn 0.11)
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
rcgen = "0.13"  # Self-signed cert generation for testing

# HTTP API for Auto-Discovery
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }

# DNS server
hickory-server = "0.24"
hickory-proto = "0.24"

# Built-in Replication (Corrosion-inspired)
quinn = "0.11"                          # QUIC transport for peer communication
foca = { version = "0.17", features = ["postcard-codec"] }  # SWIM gossip protocol
postcard = { version = "1", features = ["alloc"] }  # Required by foca postcard-codec
bincode = "1"                           # Binary encoding for compact messages
crc32fast = "1"                         # Fast CRC32 for checksums
parking_lot = "0.12"                    # Faster locks than std
bytes = "1"                             # Byte buffer utilities
rand = "0.8"                            # Random number generation for gossip

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
wiremock = "0.6"
tracing-test = "0.2"
